--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -2,13 +2,14 @@
  * AST HF Builder - Grid related CSS.
  */
  .ast-builder-grid-row {
-	display: grid;
+	display: flex;
 	grid-template-columns: auto auto;
 	align-items: center;
 	grid-column-gap: 20px;
 	overflow-wrap: anywhere;
 	> .site-header-section {
 		flex-wrap: nowrap;
+		flex-grow: 1;
 	}
 }
 .ast-builder-footer-grid-columns {
